style: fix alignment container height and border color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -624,13 +624,14 @@ span#dragonwarrior {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 5px;
-  height: 150px;
+  height: 200px;
 }
 
 .alignment-item {
-  border: 1px solid black;
+  border: 1px solid rgb(130, 130, 168);
   padding: 5px;
   margin: 0px 0px 10px 0px;
+  height: 200px;
 }
 
 #alignment-description-container {
